# python-project-template

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  SECURITY.md  _config.yml  mkdocs.yaml  pyproject.toml
.github/workflows/: codeql-analysis.yml  python-package.yml
docker/: .dockerignore  .env  Dockerfile.aws_lamnda_selenium  Dockerfile.selenium_alpine  docker-compose.yml  gui.env
docs/: _rtd_conf.py  _sphinx_conf.py  conf.py  index.rst  package_1.rst
docs/api/: index.rst  package_1.plugins.rst
docs/sphinx/: conf.py  package_1.arithmetic.rst  package_1.rst
docs/sphinx/_build/doctrees/: environment.pickle  index.doctree  package_1.arithmetic.doctree  package_1.doctree  package_1.plugins.doctree  package_2.doctree
docs/sphinx/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  package_1.arithmetic.html  package_1.html  package_1.plugins.html  package_2.html  py-modindex.html  search.html  searchindex.js
docs/sphinx/_build/html/_modules/: index.html
docs/sphinx/_build/html/_modules/package_1/: arithmetic.html  plugins.html
docs/sphinx/_build/html/_sources/: index.rst.txt
scripts/: build_sphinx_docs.sh  ci.sh  clear_cache.sh  clear_poetry_cache.sh  clear_pycache.sh  format.sh  generate_sphinx_docs_headers.py  generate_sphinx_docs_headers.sh  install_poetry.sh  lint.sh  publish_dry.sh  setup.sh  update.sh  update_docs.sh
src/: _sphinx_conf.py
src/package_1/: __init__.py  arithmetic.py
src/package_2/: __init__.py
src/scripts/: __init__.py  generate_sphinx_conf.py
tests/: entry_points_test.py
